--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <title></title>
     <base href='/'>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width,user-scalable=no">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
@@ -24,11 +24,14 @@
 
     <div ui-view="header"></div>
     <div class='main-app-body'>
-      <div ui-view="main"></div>
+      <div ui-view="main" autoscroll="true"></div>
       <span us-spinner spinner-key="spinner-1"></span>
     </div>
 
     <!-- build:js(.) scripts/vendor.js -->
+    <script src="vendor/xpath-range.js"></script>
+    <script src="vendor/textselector.js"></script>
+    <script src="vendor/highlighter.js"></script>
     <!-- bower:js -->
     <script src="bower_components/es5-shim/es5-shim.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -68,6 +71,7 @@
         <script src="scripts/controllers/article.js"></script>
         <script src="scripts/directives/actionbar.js"></script>
         <script src="scripts/directives/removearticle.js"></script>
+        <script src="scripts/directives/highlights.js"></script>
         <script src="scripts/filters/htmltoplaintext.js"></script>
         <!-- endbuild -->
 </body>
